--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,15 @@ typings/
 # next.js build output
 .next
 
-# production
-dist
-lib
-
 # platform specific
 .DS_Store
+
+# Yarn 2
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
