--- a/package.json
+++ b/package.json
@@ -1,15 +1,51 @@
 {
   "name": "cable-shared-worker",
+  "private": true,
   "version": "0.1.0",
   "description": "ActionCable and AnyCable Shared Worker support",
-  "keywords": ["anycable", "actioncable", "shared worker", "visibility api"],
-  "main": "lib/main.cjs.js",
-  "module": "lib/main.esm.js",
-  "unpkg": "lib/main.umd.js",
+  "keywords": [
+    "anycable",
+    "actioncable",
+    "shared worker",
+    "visibility api"
+  ],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c --environment BUILD:production",
+    "dev": "rollup -c -w",
+    "lint": "eslint packages/web/**/*.js packages/worker/**/*.js shared/**/*.js *.config.js",
+    "test": "jest --config jest.config.js",
+    "test:watch": "yarn run test -- --watch"
   },
   "author": "Alexey Vasiliev",
   "license": "MIT",
-  "repository": "github:le0pard/cable-shared-worker"
+  "repository": "github:le0pard/cable-shared-worker",
+  "bugs": {
+    "url": "https://github.com/le0pard/cable-shared-worker/issues"
+  },
+  "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/runtime": "^7.16.3",
+    "@babel/runtime-corejs3": "^7.16.3",
+    "@rollup/plugin-alias": "^3.1.8",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "core-js": "^3.19.3",
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.4.4",
+    "rollup": "^2.61.1",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "optionalDependencies": {
+    "@anycable/web": ">= 0.1",
+    "@rails/actioncable": ">= 6"
+  }
 }
