--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "rollup -c --environment BUILD:production",
     "dev": "rollup -c -w",
-    "lint": "eslint packages/web/**/*.js packages/worker/**/*.js shared/**/*.js *.config.js",
+    "lint": "eslint packages/**/src/*.js shared/**/*.js *.config.js",
     "test": "jest --config jest.config.js",
     "test:watch": "yarn run test -- --watch"
   },
