--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,8 @@
     "sourceType": "module",
     "ecmaFeatures": {}
   },
-  "extends": [
-    "eslint:recommended"
-  ],
-  "ignorePatterns": [
-    "packages/*/lib/*.js"
-  ],
+  "extends": ["eslint:recommended", "prettier"],
+  "ignorePatterns": ["packages/*/lib/*.js"],
   "rules": {
     "array-bracket-spacing": 2,
     "brace-style": [
@@ -26,10 +22,7 @@
         "ignoreDestructuring": false
       }
     ],
-    "comma-dangle": [
-      2,
-      "never"
-    ],
+    "comma-dangle": [2, "never"],
     "comma-spacing": [
       2,
       {
@@ -37,26 +30,13 @@
         "after": true
       }
     ],
-    "comma-style": [
-      2,
-      "last"
-    ],
+    "comma-style": [2, "last"],
     "computed-property-spacing": 2,
     "consistent-return": 2,
-    "consistent-this": [
-      2,
-      "self"
-    ],
-    "curly": [
-      2,
-      "multi-line",
-      "consistent"
-    ],
+    "consistent-this": [2, "self"],
+    "curly": [2, "multi-line", "consistent"],
     "eol-last": 2,
-    "eqeqeq": [
-      2,
-      "allow-null"
-    ],
+    "eqeqeq": [2, "allow-null"],
     "func-style": [
       2,
       "expression",
@@ -65,10 +45,7 @@
       }
     ],
     "guard-for-in": 2,
-    "handle-callback-err": [
-      2,
-      "^(err|error)$"
-    ],
+    "handle-callback-err": [2, "^(err|error)$"],
     "import/no-unresolved": 0,
     "key-spacing": [
       0,
@@ -104,10 +81,7 @@
     "no-eval": 2,
     "no-ex-assign": 2,
     "no-extend-native": 2,
-    "no-extra-parens": [
-      2,
-      "functions"
-    ],
+    "no-extra-parens": [2, "functions"],
     "no-extra-semi": 2,
     "no-floating-decimal": 2,
     "no-func-assign": 2,
@@ -163,29 +137,17 @@
         "args": "after-used"
       }
     ],
-    "no-use-before-define": [
-      2,
-      "nofunc"
-    ],
+    "no-use-before-define": [2, "nofunc"],
     "no-var": 2,
     "no-warning-comments": [
       2,
       {
-        "terms": [
-          "todo",
-          "fixme"
-        ]
+        "terms": ["todo", "fixme"]
       }
     ],
     "object-curly-spacing": 2,
-    "padded-blocks": [
-      2,
-      "never"
-    ],
-    "quote-props": [
-      0,
-      "as-needed"
-    ],
+    "padded-blocks": [2, "never"],
+    "quote-props": [0, "as-needed"],
     "quotes": [
       2,
       "single",
@@ -195,10 +157,7 @@
       }
     ],
     "radix": 0,
-    "semi": [
-      2,
-      "never"
-    ],
+    "semi": [2, "never"],
     "semi-spacing": [
       2,
       {
@@ -206,10 +165,7 @@
         "after": true
       }
     ],
-    "space-before-blocks": [
-      2,
-      "always"
-    ],
+    "space-before-blocks": [2, "always"],
     "space-before-function-paren": [
       2,
       {
@@ -218,10 +174,7 @@
         "asyncArrow": "always"
       }
     ],
-    "space-in-parens": [
-      2,
-      "never"
-    ],
+    "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
     "space-unary-ops": [
       2,
@@ -230,17 +183,11 @@
         "nonwords": false
       }
     ],
-    "strict": [
-      2,
-      "never"
-    ],
+    "strict": [2, "never"],
     "use-isnan": 2,
     "valid-typeof": 2,
     "vars-on-top": 0,
-    "wrap-iife": [
-      2,
-      "inside"
-    ],
+    "wrap-iife": [2, "inside"],
     "yoda": 0,
     "import/extensions": [
       2,
@@ -270,7 +217,5 @@
     "es6": true,
     "jest": true
   },
-  "plugins": [
-    "import"
-  ]
+  "plugins": ["import"]
 }
