--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "core-js": "^3.19.3",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "jest": "^27.4.4",
     "prettier": "^2.5.1",
