--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "jest": "^27.4.4",
+    "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "rollup": "^2.61.1",
     "rollup-plugin-terser": "^7.0.2"
