--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "rollup -c --environment BUILD:production",
     "dev": "rollup -c -w",
     "lint": "eslint packages/**/src/*.js shared/**/*.js *.config.js",
-    "test": "jest --config jest.config.js",
-    "test:watch": "jest --config jest.config.js --watch"
+    "test": "TZ=UTC jest --config jest.config.js",
+    "test:watch": "TZ=UTC jest --config jest.config.js --watch"
   },
   "author": "Alexey Vasiliev",
   "license": "MIT",
