--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Test/Build/Deploy
 on: push
 
 jobs:
-  test_and_deploy:
-    name: "Test and deploy"
+  test:
+    name: "Test"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -12,9 +12,11 @@ jobs:
           persist-credentials: false
 
       - name: Install Node.JS
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '16.9.1'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@cable-shared-worker'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -34,5 +36,56 @@ jobs:
 
       - name: Run tests
         run: yarn test
+
+  release:
+    name: "Release"
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    env:
+      NODE_ENV: production
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
+      - name: Install Node.JS
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.9.1'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@cable-shared-worker'
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - name: Restore yarn cache
+        uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: v1-${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            v1-${{ runner.os }}-yarn-cache-
+
+      - name: Install Javascript dependencies
+        run: yarn install --immutable
+
+      - name: Build all files
+        run: yarn build
+
+      - name: Publish web package
+        run: yarn publish
+        working-directory: packages/web
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish worker package
+        run: yarn publish
+        working-directory: packages/worker
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 
