--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,15 +76,8 @@ jobs:
       - name: Build all files
         run: yarn build
 
-      - name: Publish web package
-        run: yarn publish
-        working-directory: packages/web
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Publish worker package
-        run: yarn publish
-        working-directory: packages/worker
+      - name: Publish web packages
+        run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
