--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
           node-version: '16.9.1'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
+          always-auth: true
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
