--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,7 @@ jobs:
         run: |
           yarn config set npmAuthToken "${{ secrets.NPM_TOKEN }}"
           yarn config set npmRegistryServer "https://registry.npmjs.org"
+          yarn config set npmPublishAccess "public"
 
       - name: Publish packages
         run: yarn workspaces foreach --no-private npm publish
