--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Node.JS
         uses: actions/setup-node@v2
         with:
-          node-version: '16.9.1'
+          node-version: '16'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
 
@@ -53,7 +53,7 @@ jobs:
       - name: Install Node.JS
         uses: actions/setup-node@v2
         with:
-          node-version: '16.9.1'
+          node-version: '16'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
           always-auth: true
@@ -77,12 +77,13 @@ jobs:
       - name: Build all files
         run: yarn build
 
-      - name: Auth yarn
+      - name: Setup yarn publish settings
         run: |
-          yarn config set npmAuthToken "${{ secrets.NPM_TOKEN }}"
           yarn config set npmRegistryServer "https://registry.npmjs.org"
           yarn config set npmPublishAccess "public"
 
       - name: Publish packages
         run: yarn workspaces foreach --no-private npm publish
+        env:
+          YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
