--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cable-shared-worker/worker",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "ActionCable and AnyCable Shared Worker support",
   "keywords": [
     "anycable",
@@ -17,9 +17,5 @@
   "bugs": {
     "url": "https://github.com/le0pard/cable-shared-worker/issues"
   },
-  "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
-  "optionalDependencies": {
-    "@anycable/web": ">= 0.1",
-    "@rails/actioncable": ">= 6"
-  }
+  "homepage": "https://github.com/le0pard/cable-shared-worker#readme"
 }
