--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@cable-shared-worker/web",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "ActionCable and AnyCable Shared Worker support",
   "keywords": [
     "anycable",
     "actioncable",
     "shared worker",
     "visibility api"
+  ],
+  "files": [
+    "lib/",
+    "README.md",
+    "LICENSE"
   ],
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
