add linter in CI + add doc about development

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Install Javascript dependencies
         run: yarn install --immutable
 
+      - name: Run eslint
+        run: yarn lint
+
       - name: Run tests
         run: yarn test
 
