--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,21 +15,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: v1-${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            v1-${{ runner.os }}-yarn-cache-
 
       - name: Install Javascript dependencies
         run: yarn install --immutable
@@ -57,22 +45,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
           always-auth: true
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: v1-${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            v1-${{ runner.os }}-yarn-cache-
 
       - name: Install Javascript dependencies
         run: yarn install --immutable
