--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
