--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "prettier": "^2.7.1",
     "rollup": "^2.75.7",
     "rollup-plugin-terser": "^7.0.2"
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
