--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "rollup -c --environment BUILD:production",
-    "dev": "rollup -c -w",
+    "build": "rollup --bundleConfigAsCjs -c --environment BUILD:production",
+    "dev": "rollup --bundleConfigAsCjs -c -w",
     "lint": "eslint packages/**/src/*.js shared/**/*.js *.config.js",
     "test": "TZ=UTC jest --config jest.config.js",
     "test:watch": "TZ=UTC jest --config jest.config.js --watch"
@@ -27,22 +27,22 @@
   },
   "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
   "devDependencies": {
-    "@babel/core": "^7.19.1",
+    "@babel/core": "^7.19.6",
     "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.19.1",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "eslint": "^8.23.1",
+    "@babel/preset-env": "^7.19.4",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
-    "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
-    "jsdom": "^20.0.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "jsdom": "^20.0.2",
     "prettier": "^2.7.1",
-    "rollup": "^2.79.0",
+    "rollup": "^3.2.5",
     "rollup-plugin-terser": "^7.0.2"
   },
   "packageManager": "yarn@3.2.2"
