--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
+          node-version-file: '.tool-versions'
 
       - name: Install Javascript dependencies
         run: yarn install --immutable
@@ -47,6 +48,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@cable-shared-worker'
           always-auth: true
+          node-version-file: '.tool-versions'
 
       - name: Install Javascript dependencies
         run: yarn install --immutable
