--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "rollup --bundleConfigAsCjs -c --environment BUILD:production",
+    "build": "rollup --bundleConfigAsCjs -c && tsc",
     "dev": "rollup --bundleConfigAsCjs -c -w",
-    "lint": "eslint packages/**/src/*.js shared/**/*.js *.config.js",
+    "lint": "pnpify run prettier --check packages/**/src/*.js && eslint packages/**/src/*.js shared/**/*.js *.config.js",
     "test": "jest --config jest.config.js",
-    "test:watch": "jest --config jest.config.js --watch"
+    "test:watch": "jest --config jest.config.js --watch",
+    "format": "pnpify run prettier --write packages/**/src/*.js"
   },
   "author": "Alexey Vasiliev",
   "license": "MIT",
@@ -27,23 +28,24 @@
   },
   "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/eslint-parser": "^7.22.7",
-    "@babel/preset-env": "^7.22.7",
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-node": "^0.3.7",
-    "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
+    "@yarnpkg/pnpify": "^4.0.0-rc.48",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.28.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "jsdom": "^22.1.0",
-    "prettier": "^3.0.0",
-    "rollup": "^3.26.2"
+    "prettier": "^3.0.1",
+    "rollup": "^3.28.0",
+    "typescript": "^5.1.6"
   },
   "packageManager": "yarn@3.6.0"
 }
