--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,5 @@
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+compressionLevel: mixed
 
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
+enableGlobalCache: false
+
+yarnPath: .yarn/releases/yarn-4.0.0.cjs
