--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,7 @@
 # https://prettier.io/docs/en/options.html
 semi: false
 singleQuote: true
-bracketSpacing: false
+bracketSpacing: true
 arrowParens: always
 printWidth: 100
 trailingComma: none
