--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/eslint-parser": "^7.27.0",
-    "@babel/preset-env": "^7.26.9",
+    "@babel/core": "^7.27.3",
+    "@babel/eslint-parser": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.3",
@@ -41,11 +41,11 @@
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^26.0.0",
+    "jest-environment-jsdom": "30.0.0-beta.3",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
-    "rollup": "^4.37.0",
-    "typescript": "^5.8.2"
+    "rollup": "^4.41.1",
+    "typescript": "^5.8.3"
   },
   "packageManager": "yarn@4.5.1"
 }
