--- a/package.json
+++ b/package.json
@@ -28,23 +28,23 @@
   },
   "homepage": "https://github.com/le0pard/cable-shared-worker#readme",
   "devDependencies": {
-    "@babel/core": "^7.27.3",
-    "@babel/eslint-parser": "^7.27.1",
+    "@babel/core": "^7.27.7",
+    "@babel/eslint-parser": "^7.27.5",
     "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "@yarnpkg/pnpify": "^4.1.4",
+    "@yarnpkg/pnpify": "^4.1.5",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "30.0.0-beta.3",
+    "jest-environment-jsdom": "30.0.2",
     "jsdom": "^26.1.0",
-    "prettier": "^3.5.3",
-    "rollup": "^4.41.1",
+    "prettier": "^3.6.2",
+    "rollup": "^4.44.1",
     "typescript": "^5.8.3"
   },
   "packageManager": "yarn@4.5.1"
