--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:watch": "jest --config jest.config.js --watch",
     "format": "pnpify run prettier --write packages/**/src/*.js"
   },
-  "author": "Alexey Vasiliev",
+  "author": "Oleksii Vasyliev",
   "license": "MIT",
   "repository": "github:le0pard/cable-shared-worker",
   "bugs": {
@@ -36,15 +36,15 @@
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@yarnpkg/pnpify": "^4.1.6",
-    "eslint": "^9.39.2",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "30.2.0",
     "jsdom": "^27.4.0",
-    "prettier": "^3.8.0",
-    "rollup": "^4.55.1",
+    "prettier": "^3.8.1",
+    "rollup": "^4.57.0",
     "typescript": "^5.9.3"
   },
   "packageManager": "yarn@4.12.0"
