--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cable-shared-worker/worker",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "ActionCable and AnyCable Shared Worker support",
   "keywords": [
     "anycable",
@@ -23,7 +23,7 @@
     }
   },
   "types": "dist/index.esm.d.ts",
-  "author": "Alexey Vasiliev",
+  "author": "Oleksii Vasyliev",
   "license": "MIT",
   "repository": "github:le0pard/cable-shared-worker",
   "bugs": {
